--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -15,5 +15,5 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Build
+      - name: Unit test
         run: npm run test:unit
