--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/jest": "29.5.11",
-    "dotenv": "^16.3.1",
+    "dotenv": "16.3.1",
     "jest": "29.7.0",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1"
