--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && tsc -p tsconfig.build.json",
-    "test:unit": "jest --verbose --config './jest.config.json' --rootDir ./tests/unit --coverage --coverageReporters text",
+    "test:unit": "jest --verbose --config './jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coverageReporters text",
     "test:integration": "jest --verbose --config './jest.config.json' --rootDir ./tests/integration --forceExit"
   },
   "repository": {
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/jest": "29.5.11",
-    "dotenv": "^16.3.1",
+    "dotenv": "16.3.1",
     "jest": "29.7.0",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1"
