--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-unit_test:
     runs-on: ubuntu-latest
+    env:
+      HEDERA_ACCOUNT_ID: ${{ secrets.HEDERA_ACCOUNT_ID }}
+      HEDERA_PRIVATE_KEY: ${{ secrets.HEDERA_PRIVATE_KEY }}
+      NODE_ENV: CI
     steps:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
@@ -17,3 +21,6 @@ jobs:
 
       - name: Unit test
         run: npm run test:unit
+
+      - name: Integration test
+        run: npm run test:integration
