--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:unit": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage/unit --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html json-summary",
     "test:integration": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/integration/**/*.spec.ts' --coverage --coverageDirectory coverage/integration --collectCoverageFrom \"src/hedera/**/*.{js,jsx,ts,tsx}\" --coverageReporters text html json-summary --forceExit",
     "test:all": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/**/*.spec.ts' --coverage --coverageDirectory coverage/all --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --forceExit --coverageReporters text html json-summary",
-    "test:create_badges": "rm -rf img; mkdir img; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img"
+    "test:create_badges": "rm -rf img; mkdir img; npm run test:unit; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img"
   },
   "repository": {
     "type": "git",
