--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && tsc -p tsconfig.build.json",
-    "test:unit": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage/unit --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html",
-    "test:integration": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/integration/**/*.spec.ts' --coverage --coverageDirectory coverage/integration --collectCoverageFrom \"src/hedera/**/*.{js,jsx,ts,tsx}\" --coverageReporters text html --forceExit",
-    "test:all": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/**/*.spec.ts' --coverage --coverageDirectory coverage/all --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --forceExit --coverageReporters text html"
+    "test:unit": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage/unit --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html json-summary",
+    "test:integration": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/integration/**/*.spec.ts' --coverage --coverageDirectory coverage/integration --collectCoverageFrom \"src/hedera/**/*.{js,jsx,ts,tsx}\" --coverageReporters text html json-summary --forceExit",
+    "test:all": "jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/**/*.spec.ts' --coverage --coverageDirectory coverage/all --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --forceExit --coverageReporters text html json-summary",
+    "test:create_badges": "rm -rf img; mkdir img; npm run test:unit; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@types/jest": "29.5.11",
     "dotenv": "16.3.1",
     "jest": "29.7.0",
+    "jest-coverage-badges": "1.1.2",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1"
   }
