Decouple testing configurations and coverage thresholds

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -20,4 +20,7 @@ jobs:
         run: npm run build
 
       - name: Unit test
-        run: npm run test:all
+        run: npm run test:unit
+
+      - name: Integration test
+        run: npm run test:integration
