--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rm -rf lib && tsc -p tsconfig.build.json",
     "test:unit": "rm -rf coverage/unit; jest --rootDir . --bail --colors --verbose --config './tests/unit/jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage/unit --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html json-summary",
     "test:integration": "rm -rf coverage/integration; jest --rootDir . --bail --colors --verbose --config './tests/integration/jest.config.json' --testMatch '**/tests/integration/**/*.spec.ts' --coverage --coverageDirectory coverage/integration --collectCoverageFrom \"src/hedera/**/*.{js,jsx,ts,tsx}\" --coverageReporters text html json-summary --forceExit",
-    "test:all": "rm -rf coverage; jest --bail --colors --verbose --config './jest.config.json' --testMatch '**/tests/**/*.spec.ts' --coverage --coverageDirectory coverage/all --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --forceExit --coverageReporters text html json-summary ",
+    "test:all": "npm run test:unit && npm run test:integration",
     "test:create_badges": "rm -rf img; mkdir img; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img",
     "prepare": "husky install"
   },
