--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:integration": "rm -rf coverage/integration; jest --rootDir . --bail --colors --verbose --config './tests/integration/jest.config.json' --testMatch '**/tests/integration/**/*.spec.ts' --coverage --coverageDirectory coverage/integration --collectCoverageFrom \"src/hedera/**/*.{js,jsx,ts,tsx}\" --coverageReporters text html json-summary --forceExit",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:create_badges": "rm -rf img; mkdir img; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img",
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "prepare": "husky install"
   },
   "repository": {
@@ -24,16 +25,21 @@
   "homepage": "https://github.com/isrand/hetsdk#readme",
   "dependencies": {
     "@hashgraph/sdk": "2.36.0",
-    "crystals-kyber": "5.1.0",
-    "typescript": "5.2.2"
+    "crystals-kyber": "5.1.0"
   },
   "devDependencies": {
     "@types/jest": "29.5.11",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "dotenv": "16.3.1",
+    "eslint": "8.56.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "husky": "8.0.3",
     "jest": "29.7.0",
     "jest-coverage-badges": "1.1.2",
     "supertest": "6.3.3",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.1",
+    "typescript": "5.3.3"
   }
 }
