--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
 
+      - name: Lint
+        run: npm run lint
+
       - name: Build
         run: npm run build
 
