--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rm -rf lib && tsc -p tsconfig.build.json",
     "test:unit": "rm -rf coverage/unit; jest --rootDir . --bail --colors --verbose --config './tests/unit/jest.config.json' --testMatch '**/tests/unit/**/*.spec.ts' --coverage --coverageDirectory coverage/unit --collectCoverageFrom \"src/**/*.{js,jsx,ts,tsx}\" --coveragePathIgnorePatterns \"src/hedera\" --coverageReporters text html json-summary",
     "test:integration": "rm -rf coverage/integration; jest --rootDir . --bail --colors --verbose --config './tests/integration/jest.config.json' --testMatch '**/tests/integration/**/*.spec.ts' --coverage --coverageDirectory coverage/integration --collectCoverageFrom \"src/hedera/**/*.{js,jsx,ts,tsx}\" --coverageReporters text html json-summary --forceExit",
+    "test:limits": "cat ./tests/limits/warning.txt; jest --rootDir . --bail --colors --verbose --config './tests/limits/jest.config.json' --testMatch '**/tests/limits/**/*.spec.ts' --forceExit",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:create_badges": "rm -rf img; mkdir img; jest-coverage-badges --input ./coverage/unit/coverage-summary.json --output img",
     "lint": "eslint \"src/**/*.ts\" --fix",
