--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,5 +27,5 @@ jobs:
       - name: Unit test
         run: npm run test:unit
 
-      - name: Integration test
-        run: npm run test:integration
+      - name: Flows test
+        run: npm run test:flows
